unpackaged/main/default/objects/Opportunity/fields/ACV_Baseline__c.field-meta.xml
<CustomField>
    <fullName>ACV_Baseline__c</fullName>
    <label>ACV Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>