unpackaged/main/default/objects/Opportunity/fields/ACV_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ACV_Rollup__c</fullName>
    <description>Sum of Renewable Quote lines added to an Opportunity from the Quote object</description>
    <inlineHelpText>Sum of Renewable Quote lines added to an Opportunity from the Quote object</inlineHelpText>
    <label>ACV Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>