unpackaged/main/default/objects/Opportunity/fields/ACV_Services__c.field-meta.xml
<CustomField>
    <fullName>ACV_Services__c</fullName>
    <formula>(ACV_Synced_Quote__c +  Services__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV + Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>