unpackaged/main/default/objects/Opportunity/fields/ACV_Services_Baseline__c.field-meta.xml
<CustomField>
    <fullName>ACV_Services_Baseline__c</fullName>
    <formula>Contract.Contract_ACV_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV + Services Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>