unpackaged/main/default/objects/Opportunity/fields/ACV_Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>ACV_Synced_Quote__c</fullName>
    <formula>IF(
   SyncedQuote.Months_in_Contract__c &gt; 12,
   
   (TCV_synced_quote__c  / SyncedQuote.Months_in_Contract__c) * 12,

   TCV_synced_quote__c

  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV (Synced Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>