unpackaged/main/default/objects/Opportunity/fields/ACVPrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>ACVPrimaryQuote__c</fullName>
    <description>This is the ACV for the primary quote</description>
    <formula>IF(
SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c &gt; 12,

(  TCVPrimaryQuote__c / SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c) * 12,

TCVPrimaryQuote__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the ACV for the primary quote</inlineHelpText>
    <label>ACV (Primary Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>