unpackaged/main/default/objects/Opportunity/fields/ACVServicesPrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>ACVServicesPrimaryQuote__c</fullName>
    <description>Captures the primary quote ACV and the associated services</description>
    <formula>ACVPrimaryQuote__c + Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures the primary quote ACV and the associated services</inlineHelpText>
    <label>ACV + Services (Primary Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>