unpackaged/main/default/objects/Opportunity/fields/ACVwithServices__c.field-meta.xml
<CustomField>
    <fullName>ACVwithServices__c</fullName>
    <description>combines the ACV and the Services value</description>
    <formula>AnnualContractValueACV__c +  Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combines the ACV and the Services amounts</inlineHelpText>
    <label>ACV with Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>