unpackaged/main/default/objects/Opportunity/fields/Adjusted_RACV__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_RACV__c</fullName>
    <description>The Baseline RACV plus the adjustment</description>
    <formula>RACV_Baseline__c +  Adjustment_to_Baseline_RACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted RACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>