unpackaged/main/default/objects/Opportunity/fields/Adjustment_to_ACV__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_to_ACV__c</fullName>
    <description>Adds to the ACV calculation</description>
    <label>Adjustment to ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>