unpackaged/main/default/objects/Opportunity/fields/Adjustment_to_Baseline_RACV__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_to_Baseline_RACV__c</fullName>
    <description>Adds to the Baseline RACV calculation</description>
    <label>Adjustment to Baseline RACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>