unpackaged/main/default/objects/Opportunity/fields/Adjustment_to_NACV__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_to_NACV__c</fullName>
    <description>Adds to the NACV calculation</description>
    <label>Adjustment to NACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>