unpackaged/main/default/objects/Opportunity/fields/AE_Approval_Champion_Alignment__c.field-meta.xml
<CustomField>
    <fullName>AE_Approval_Champion_Alignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Approval - Move to Champion Alignment</label>
    <type>Checkbox</type>
</CustomField>