unpackaged/main/default/objects/Opportunity/fields/AE_Approval_Qualifying__c.field-meta.xml
<CustomField>
    <fullName>AE_Approval_Qualifying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Approval - Move to Qualifying</label>
    <type>Checkbox</type>
</CustomField>