unpackaged/main/default/objects/Opportunity/fields/AE_Approval_Tech_Validation__c.field-meta.xml
<CustomField>
    <fullName>AE_Approval_Tech_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Approval - Move to Tech Validation</label>
    <type>Checkbox</type>
</CustomField>