unpackaged/main/default/objects/Opportunity/fields/AE_Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_Discovery_Date__c</fullName>
    <label>AE Discovery Date</label>
    <type>Date</type>
</CustomField>