unpackaged/main/default/objects/Opportunity/fields/AE_Manager_Approval_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>AE_Manager_Approval_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Manager Approval - Move to Evaluation</label>
    <type>Checkbox</type>
</CustomField>