unpackaged/main/default/objects/Opportunity/fields/AE_Manager_Move_to_Contracting__c.field-meta.xml
<CustomField>
    <fullName>AE_Manager_Move_to_Contracting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Manager - Move to Contracting</label>
    <type>Checkbox</type>
</CustomField>