unpackaged/main/default/objects/Opportunity/fields/AGPL__c.field-meta.xml
<CustomField>
    <fullName>AGPL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AGPL</label>
    <type>Checkbox</type>
</CustomField>