unpackaged/main/default/objects/Opportunity/fields/AnnualContractValueACV__c.field-meta.xml
<CustomField>
    <fullName>AnnualContractValueACV__c</fullName>
    <description>Pulls from the opportunity product object</description>
    <formula>IF(
 (TermLength__c) &gt; 12,

( TotalContractValueTCV__c  / (TermLength__c)) * 12,

TotalContractValueTCV__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of the contract at an annual level, less services.</inlineHelpText>
    <label>Annual Contract Value (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>