unpackaged/main/default/objects/Opportunity/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <label>Billing System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ubersmith</fullName>
            </value>
            <value>
                <fullName>Intacct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>