unpackaged/main/default/objects/Opportunity/fields/Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Notes__c</fullName>
    <description>Booking notes for the Deal Ops team to utilize</description>
    <inlineHelpText>Booking notes for the Deal Ops team to utilize</inlineHelpText>
    <label>Booking Notes</label>
    <type>TextArea</type>
</CustomField>