unpackaged/main/default/objects/Opportunity/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <description>Displays the status(es) of the booking progress</description>
    <inlineHelpText>Displays the status(es) of the booking progress</inlineHelpText>
    <label>Booking Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting PO</fullName>
            </value>
            <value>
                <fullName>Awaiting Clarification</fullName>
            </value>
            <value>
                <fullName>Awaiting Paperwork Changes</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer</fullName>
            </value>
            <value>
                <fullName>Awaiting Sales</fullName>
            </value>
            <value>
                <fullName>Awaiting Legal</fullName>
            </value>
            <value>
                <fullName>Awaiting Finance</fullName>
            </value>
            <value>
                <fullName>Awaiting Deal Manager</fullName>
            </value>
            <value>
                <fullName>Completed - Opportunity Closed</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>