unpackaged/main/default/objects/Opportunity/fields/Bridge_Deal__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bridge Deal</label>
    <type>Checkbox</type>
</CustomField>