unpackaged/main/default/objects/Opportunity/fields/Calculated_ACV__c.field-meta.xml
<CustomField>
    <fullName>Calculated_ACV__c</fullName>
    <label>Calculated ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>