unpackaged/main/default/objects/Opportunity/fields/CFCR_Is_Revived__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Is_Revived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when an opportunity is opened after previously being closed</description>
    <inlineHelpText>Checked when an opportunity opened after previously being closed</inlineHelpText>
    <label>Revived</label>
    <type>Checkbox</type>
</CustomField>