unpackaged/main/default/objects/Opportunity/fields/CFCR_S0__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S0__c</fullName>
    <formula>!ISBLANK(CFCR_S0_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S0</label>
    <type>Checkbox</type>
</CustomField>