unpackaged/main/default/objects/Opportunity/fields/CFCR_S0_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S0_Date__c</fullName>
    <label>S0 Date</label>
    <type>Date</type>
</CustomField>