unpackaged/main/default/objects/Opportunity/fields/CFCR_S0_to_S1__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S0_to_S1__c</fullName>
    <formula>CFCR_S1_Date__c - CFCR_S0_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S0 to S1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>