unpackaged/main/default/objects/Opportunity/fields/CFCR_S1__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S1__c</fullName>
    <formula>!ISBLANK(CFCR_S1_Date__c)</formula>
    <label>S1</label>
    <type>Checkbox</type>
</CustomField>