unpackaged/main/default/objects/Opportunity/fields/CFCR_S1_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S1_Date__c</fullName>
    <label>S1 Date</label>
    <type>Date</type>
</CustomField>