unpackaged/main/default/objects/Opportunity/fields/CFCR_S1_to_S2__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S1_to_S2__c</fullName>
    <formula>CFCR_S2_Date__c -  CFCR_S1_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S1 to S2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>