unpackaged/main/default/objects/Opportunity/fields/CFCR_S2__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S2__c</fullName>
    <formula>!ISBLANK( CFCR_S2_Date__c )</formula>
    <label>S2</label>
    <type>Checkbox</type>
</CustomField>