unpackaged/main/default/objects/Opportunity/fields/CFCR_S2_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S2_Date__c</fullName>
    <label>S2 Date</label>
    <type>Date</type>
</CustomField>