unpackaged/main/default/objects/Opportunity/fields/CFCR_Still_in_S0__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_S0__c</fullName>
    <formula>Stage_0_Exploration__c &amp;&amp; ISPICKVAL(StageName , "Qualifying Opportunity")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Still in S0</label>
    <type>Checkbox</type>
</CustomField>