unpackaged/main/default/objects/Opportunity/fields/CFCR_Still_in_S1__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_S1__c</fullName>
    <formula>ISPICKVAL(StageName , "Qualifying Opportunity")  &amp;&amp; Stage_0_Exploration__c = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Still in S1</label>
    <type>Checkbox</type>
</CustomField>