unpackaged/main/default/objects/Opportunity/fields/CFCR_Still_in_S2__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_S2__c</fullName>
    <formula>ISPICKVAL( StageName , "Technical Validation")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Still in S2</label>
    <type>Checkbox</type>
</CustomField>