unpackaged/main/default/objects/Opportunity/fields/CFCR_Velocity_Won__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Velocity_Won__c</fullName>
    <description>Days between opportunity create and closed for won opportunities. Used in Full Circle Reporting.</description>
    <formula>IF(IsWon=TRUE, ( CloseDate - DATEVALUE(CreatedDate) ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between opportunity create and closed for won opportunities. Used in Full Circle Reporting.</inlineHelpText>
    <label>Velocity Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>