unpackaged/main/default/objects/Opportunity/fields/champion__c.field-meta.xml
<CustomField>
    <fullName>champion__c</fullName>
    <inlineHelpText>Does this person have a vested interest in addressing the pain? Access to power? Have you tested your champion and how?</inlineHelpText>
    <label>Champion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>