unpackaged/main/default/objects/Opportunity/fields/Champion_Score__c.field-meta.xml
<CustomField>
    <fullName>Champion_Score__c</fullName>
    <description>Who has power and influence to gain through a Grafana Deployment?</description>
    <inlineHelpText>--A score of 0 means we don’t have a champion. 
--A score of 1 means the rep believes they have a champion, but has not tested that person. 
--A score of 2 means the rep has a champion, and has tested their willingness to get the deal in front of an economic buyer.</inlineHelpText>
    <label>Champion Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>