unpackaged/main/default/objects/Opportunity/fields/Churn_Category__c.field-meta.xml
<CustomField>
    <fullName>Churn_Category__c</fullName>
    <label>Churn Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change in Business Situation</fullName>
            </value>
            <value>
                <fullName>Enterprise functionality no longer needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overprovisioned</fullName>
            </value>
            <value>
                <fullName>Performance and Reliability</fullName>
            </value>
            <value>
                <fullName>Pricing too high</fullName>
            </value>
            <value>
                <fullName>Product didn’t meet needs</fullName>
            </value>
            <value>
                <fullName>Strategic Relationship</fullName>
            </value>
            <value>
                <fullName>Unsuccessful Implementation</fullName>
            </value>
            <value>
                <fullName>Value vs OSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>