unpackaged/main/default/objects/Opportunity/fields/Close_Date_Week__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Week__c</fullName>
    <label>Close Date - Week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>