unpackaged/main/default/objects/Opportunity/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <label>Cloud Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cloud_Provider</valueSetName>
    </valueSet>
</CustomField>