unpackaged/main/default/objects/Opportunity/fields/Commissionable_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Manager_Name__c</fullName>
    <description>This is the manager of the opportunity owner at the time the deal is marked "deal won"</description>
    <inlineHelpText>This is the manager of the opportunity owner at the time the deal is marked "deal won"</inlineHelpText>
    <label>Commissionable Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>