unpackaged/main/default/objects/Opportunity/fields/Commissionable_Net_NACV__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Net_NACV__c</fullName>
    <description>This is the Net NACV plus the Commissionable Net NACV Adjustment</description>
    <formula>Net_NACV__c +  Commissionable_Net_NACV_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Net NACV plus the Commissionable Net NACV Adjustment</inlineHelpText>
    <label>Commissionable Net NACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>