unpackaged/main/default/objects/Opportunity/fields/Commissionable_Net_NACV_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Net_NACV_Adjustment__c</fullName>
    <description>This field is utilized by finance to adjust the commissionable net NACV.</description>
    <inlineHelpText>This field is utilized by finance to adjust the commissionable net NACV.</inlineHelpText>
    <label>Commissionable Net NACV Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>