unpackaged/main/default/objects/Opportunity/fields/Commissionable_Net_NACV_Services__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Net_NACV_Services__c</fullName>
    <description>This is the Commissionable Net NACV plus the Commissionable Services</description>
    <formula>Commissionable_Net_NACV__c +  Commissionable_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Commissionable Net NACV plus the Commissionable Services</inlineHelpText>
    <label>Commissionable Net NACV + Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>