unpackaged/main/default/objects/Opportunity/fields/Commissionable_Services__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Services__c</fullName>
    <description>This is 75% of the commissionable services plus the commissionable services adjustment field</description>
    <formula>(Services__c  * 0.75)+ Commissionable_Services_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is 75% of the commissionable services plus the commissionable services adjustment field</inlineHelpText>
    <label>Commissionable Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>