unpackaged/main/default/objects/Opportunity/fields/Commissionable_Services_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Services_Adjustment__c</fullName>
    <description>This field is utilized by the finance team to make adjustments to commissions as needed. Visible to finance ONLY.</description>
    <inlineHelpText>This field is utilized by the finance team to make adjustments to commissions as needed.</inlineHelpText>
    <label>Commissionable Services Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>