unpackaged/main/default/objects/Opportunity/fields/Commissionable_Territory__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Territory__c</fullName>
    <description>This is the territory of the opportunity owner at the time the deal is marked "deal won"</description>
    <inlineHelpText>This is the territory of the opportunity owner at the time the deal is marked "deal won"</inlineHelpText>
    <label>Commissionable Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>