unpackaged/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <inlineHelpText>What alternative solutions exist to solve their pain? How do they compare on decision criteria? Who is the competition's champion? How do we lock-out the competition?</inlineHelpText>
    <label>Competition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>