unpackaged/main/default/objects/Opportunity/fields/Competition_Score__c.field-meta.xml
<CustomField>
    <fullName>Competition_Score__c</fullName>
    <description>Who are we competing against?</description>
    <inlineHelpText>--A score of 0 means they don’t know who the competition is. 
--A score of 1 means the rep suspects who the competition is, based on inference. 
--A score of 2 means the rep has been told who they are up against</inlineHelpText>
    <label>Competition Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>