unpackaged/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AppD</fullName>
            </value>
            <value>
                <fullName>AWS - AMG</fullName>
            </value>
            <value>
                <fullName>AWS - AMP</fullName>
            </value>
            <value>
                <fullName>Datadog</fullName>
            </value>
            <value>
                <fullName>Dynatrace</fullName>
            </value>
            <value>
                <fullName>Elastic</fullName>
            </value>
            <value>
                <fullName>Influx</fullName>
            </value>
            <value>
                <fullName>New Relic</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Splunk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other - details required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>