unpackaged/main/default/objects/Opportunity/fields/Competitor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Notes__c</fullName>
    <description>These are notes that provide more detail about the competitor that we are up against.</description>
    <inlineHelpText>These are notes that provide more detail about the competitor that we are up against.</inlineHelpText>
    <label>Competitor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>