unpackaged/main/default/objects/Opportunity/fields/ContractTermLength__c.field-meta.xml
<CustomField>
    <fullName>ContractTermLength__c</fullName>
    <description>length of the contract</description>
    <inlineHelpText>length of the contract</inlineHelpText>
    <label>Term Length</label>
    <summarizedField>OpportunityLineItem.QuoteTerm__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>