unpackaged/main/default/objects/Opportunity/fields/CountforPriorQtrClose__c.field-meta.xml
<CustomField>
    <fullName>CountforPriorQtrClose__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if we are counting the deal for the prior quarter instead of the actual close quarter</description>
    <inlineHelpText>checked if we are counting the deal for the prior quarter instead of the actual close quarter</inlineHelpText>
    <label>Count for Prior Qtr Close</label>
    <type>Checkbox</type>
</CustomField>