unpackaged/main/default/objects/Opportunity/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <formula>CreatedBy.Role_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Role</label>
    <type>Text</type>
</CustomField>