unpackaged/main/default/objects/Opportunity/fields/Created_by_running_user__c.field-meta.xml
<CustomField>
    <fullName>Created_by_running_user__c</fullName>
    <formula>CreatedById  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by running user</label>
    <type>Checkbox</type>
</CustomField>