unpackaged/main/default/objects/Opportunity/fields/Created_Date_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Week__c</fullName>
    <label>Created Date - Week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>