unpackaged/main/default/objects/Opportunity/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <description>Customer Success Manager on Account</description>
    <formula>(Account.Customer_Success_Manager__r.FirstName&amp;" "&amp;Account.Customer_Success_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM</label>
    <type>Text</type>
</CustomField>