unpackaged/main/default/objects/Opportunity/fields/CSM_Churn_Call__c.field-meta.xml
<CustomField>
    <fullName>CSM_Churn_Call__c</fullName>
    <label>CSM Churn Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>