unpackaged/main/default/objects/Opportunity/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <label>Customer PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>