unpackaged/main/default/objects/Opportunity/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSMOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>