unpackaged/main/default/objects/Opportunity/fields/DateofGrafanaDay__c.field-meta.xml
<CustomField>
    <fullName>DateofGrafanaDay__c</fullName>
    <description>this is the day the grafana day took place for this opportunity</description>
    <inlineHelpText>this is the day the grafana day took place for this opportunity</inlineHelpText>
    <label>Date of Grafana Day</label>
    <type>Date</type>
</CustomField>