unpackaged/main/default/objects/Opportunity/fields/DateofLastEBMeeting__c.field-meta.xml
<CustomField>
    <fullName>DateofLastEBMeeting__c</fullName>
    <description>This captures the date of the last executive buyer meeting for the 5 levers reporting.</description>
    <inlineHelpText>This captures the date of the last executive buyer meeting for the 5 levers reporting.</inlineHelpText>
    <label>Date of Last EB Meeting</label>
    <type>Date</type>
</CustomField>