unpackaged/main/default/objects/Opportunity/fields/DateofLastW__c.field-meta.xml
<CustomField>
    <fullName>DateofLastW__c</fullName>
    <description>Field capturing the date of the last W sent to a customer for 5 levers reporting.</description>
    <inlineHelpText>Field capturing the date of the last W sent to a customer for 5 levers reporting.</inlineHelpText>
    <label>Date of Last W</label>
    <type>Date</type>
</CustomField>