unpackaged/main/default/objects/Opportunity/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <description>This is the number of days it takes an opportunity to close as deal won from the time it is created.</description>
    <formula>IF(
TEXT(StageName) = "Deal Won",
CloseDate - DATEVALUE(CreatedDate),
NULL)</formula>
    <inlineHelpText>This is the number of days it takes an opportunity to close as deal won from the time it is created.</inlineHelpText>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>