unpackaged/main/default/objects/Opportunity/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <description>Decision Criteria provide a financial justification of why anything, why now, why Grafana?</description>
    <inlineHelpText>Business Criteria &amp; Technical Criteria - Clarify priority and importance of the shopping list.</inlineHelpText>
    <label>DC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>